--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-scroll": "^1.8.1",
+    "react-youtube": "^7.13.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
