--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-instagram-embed": "^2.0.0",
+    "react-multi-carousel": "^2.6.3",
+    "react-responsive-carousel": "^3.2.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-scroll": "^1.8.1",
