--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.1",
+    "react-tweet-embed": "^1.3.0",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
