--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.1",
     "react-scroll-to-top": "^1.0.5",
+    "react-scroll-up": "^1.3.7",
     "react-tweet-embed": "^1.3.0",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.2.1",
