--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap": "^2.1.0",
     "react-carousel-indicator": "^1.0.6",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
