--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-tweet-embed": "^1.3.0",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "immer": ">=9.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
