--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
+    "immer": ">=9.0.6",
     "jquery": "^3.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.1.0",
@@ -24,8 +25,7 @@
     "react-tweet-embed": "^1.3.0",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4",
-    "immer": ">=9.0.6"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
